Added Markdown cell description

--- a/notebooks/customer_operations_analysis.ipynb
+++ b/notebooks/customer_operations_analysis.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4622b643",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.DataFrame'>\n",
+      "RangeIndex: 20000 entries, 0 to 19999\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column    Non-Null Count  Dtype\n",
+      "---  ------    --------------  -----\n",
+      " 0   subject   18539 non-null  str  \n",
+      " 1   body      19998 non-null  str  \n",
+      " 2   answer    19996 non-null  str  \n",
+      " 3   type      20000 non-null  str  \n",
+      " 4   queue     20000 non-null  str  \n",
+      " 5   priority  20000 non-null  str  \n",
+      " 6   language  20000 non-null  str  \n",
+      " 7   tag_1     20000 non-null  str  \n",
+      " 8   tag_2     19954 non-null  str  \n",
+      " 9   tag_3     19905 non-null  str  \n",
+      " 10  tag_4     18461 non-null  str  \n",
+      " 11  tag_5     13091 non-null  str  \n",
+      " 12  tag_6     7351 non-null   str  \n",
+      " 13  tag_7     3928 non-null   str  \n",
+      " 14  tag_8     1907 non-null   str  \n",
+      "dtypes: str(15)\n",
+      "memory usage: 2.3 MB\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,10 +48,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7b729b60",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>queue</th>\n",
+       "      <th>priority</th>\n",
+       "      <th>language</th>\n",
+       "      <th>tag_1</th>\n",
+       "      <th>tag_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Incident</td>\n",
+       "      <td>General Inquiry</td>\n",
+       "      <td>low</td>\n",
+       "      <td>de</td>\n",
+       "      <td>Crash</td>\n",
+       "      <td>Technical</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Request</td>\n",
+       "      <td>Customer Service</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Feedback</td>\n",
+       "      <td>Sales</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Request</td>\n",
+       "      <td>Customer Service</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Technical</td>\n",
+       "      <td>Product</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Incident</td>\n",
+       "      <td>Customer Service</td>\n",
+       "      <td>high</td>\n",
+       "      <td>de</td>\n",
+       "      <td>Security</td>\n",
+       "      <td>Breach</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Request</td>\n",
+       "      <td>Customer Service</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Security</td>\n",
+       "      <td>Customer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       type             queue priority language      tag_1      tag_2\n",
+       "0  Incident   General Inquiry      low       de      Crash  Technical\n",
+       "1   Request  Customer Service   medium       en   Feedback      Sales\n",
+       "2   Request  Customer Service   medium       en  Technical    Product\n",
+       "3  Incident  Customer Service     high       de   Security     Breach\n",
+       "4   Request  Customer Service   medium       en   Security   Customer"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_work = df.copy() ##for data cleaning and manipulation\n",
     "##Selecting only the relevant columns for operations analysis\n",
@@ -35,10 +157,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "209ea9ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type        0\n",
+       "queue       0\n",
+       "priority    0\n",
+       "language    0\n",
+       "tag_1       0\n",
+       "tag_2       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "##replace missing values in tag_2 with \"None\"\n",
     "df_ops[\"tag_2\"] = df_ops[\"tag_2\"].fillna(\"None\")\n",
@@ -48,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cab8e4ef",
    "metadata": {},
    "outputs": [],
@@ -59,10 +198,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "77297b1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>queue</th>\n",
+       "      <th>priority</th>\n",
+       "      <th>language</th>\n",
+       "      <th>tag_1</th>\n",
+       "      <th>tag_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Incident</td>\n",
+       "      <td>General Inquiry</td>\n",
+       "      <td>low</td>\n",
+       "      <td>de</td>\n",
+       "      <td>Crash</td>\n",
+       "      <td>Technical</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Request</td>\n",
+       "      <td>Customer Service</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Feedback</td>\n",
+       "      <td>Sales</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Request</td>\n",
+       "      <td>Customer Service</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Technical</td>\n",
+       "      <td>Product</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Incident</td>\n",
+       "      <td>Customer Service</td>\n",
+       "      <td>high</td>\n",
+       "      <td>de</td>\n",
+       "      <td>Security</td>\n",
+       "      <td>Breach</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Request</td>\n",
+       "      <td>Customer Service</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Security</td>\n",
+       "      <td>Customer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       type             queue priority language      tag_1      tag_2\n",
+       "0  Incident   General Inquiry      low       de      Crash  Technical\n",
+       "1   Request  Customer Service   medium       en   Feedback      Sales\n",
+       "2   Request  Customer Service   medium       en  Technical    Product\n",
+       "3  Incident  Customer Service     high       de   Security     Breach\n",
+       "4   Request  Customer Service   medium       en   Security   Customer"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "##Load the cleaned dataset for analysis\n",
     "df_analysis = pd.read_csv(\"../data/cleaned_data.csv\")\n",
@@ -72,10 +304,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "37c84265",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "language\n",
+       "en    11923\n",
+       "de     8077\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#which priority level has the most tickets?\n",
     "df_analysis[\"priority\"].value_counts()\n",
@@ -92,10 +338,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "517addeb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Priority Distribution:\n",
+      " priority\n",
+      "medium    8144\n",
+      "high      7801\n",
+      "low       4055\n",
+      "Name: count, dtype: int64 \n",
+      "\n",
+      "Queue Distribution:\n",
+      " queue\n",
+      "Technical Support                  5824\n",
+      "Product Support                    3708\n",
+      "Customer Service                   3152\n",
+      "IT Support                         2292\n",
+      "Billing and Payments               2086\n",
+      "Returns and Exchanges              1001\n",
+      "Service Outages and Maintenance     764\n",
+      "Sales and Pre-Sales                 572\n",
+      "Human Resources                     338\n",
+      "General Inquiry                     263\n",
+      "Name: count, dtype: int64 \n",
+      "\n",
+      "Type Distribution:\n",
+      " type\n",
+      "Incident    7978\n",
+      "Request     5763\n",
+      "Problem     4184\n",
+      "Change      2075\n",
+      "Name: count, dtype: int64 \n",
+      "\n",
+      "Language Distribution:\n",
+      " language\n",
+      "en    11923\n",
+      "de     8077\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "#Summary of distributions\n",
     "print(\"Priority Distribution:\\n\", df_analysis[\"priority\"].value_counts(), \"\\n\")\n",
@@ -109,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "8ead233c",
    "metadata": {},
    "outputs": [
@@ -139,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "3e0233a2",
    "metadata": {},
    "outputs": [
@@ -168,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "bcfe9f81",
    "metadata": {},
    "outputs": [
@@ -197,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "54cf6a38",
    "metadata": {},
    "outputs": [
@@ -222,6 +509,62 @@
     "plt.xticks(rotation=0)\n",
     "plt.savefig(\"../visuals/type_distribution.png\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c09c6c5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----Key Opertional KPIs----\n",
+      "Total Tickets: 20000\n",
+      "High Priority Tickets: 7801\n",
+      "Medium Priority Tickets: 8144\n",
+      "Low Priority Tickets: 4055\n",
+      "\n",
+      "Top Support Team:\n",
+      "queue\n",
+      "Technical Support    5824\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"----Key Opertional KPIs----\")\n",
+    "\n",
+    "print(\"Total Tickets:\", len(df_analysis))\n",
+    "print(\"High Priority Tickets:\", (df_analysis[\"priority\"] == \"high\").sum())\n",
+    "print(\"Medium Priority Tickets:\", (df_analysis[\"priority\"] == \"medium\").sum())\n",
+    "print(\"Low Priority Tickets:\", (df_analysis[\"priority\"] == \"low\").sum())\n",
+    "\n",
+    "print(\"\\nTop Support Team:\")\n",
+    "print(df_analysis[\"queue\"].value_counts().head(1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccde4b77",
+   "metadata": {},
+   "source": [
+    "## 📌 Executive Summary\n",
+    "\n",
+    "This analysis explored 20,000 customer support tickets to understand operational workload and support performance.\n",
+    "\n",
+    "### Key Findings:\n",
+    "- Medium and High priority tickets dominate, indicating sustained operational pressure.\n",
+    "- Technical Support handles the largest ticket volume, suggesting potential workload imbalance.\n",
+    "- Incident-type issues are most frequent, showing a reactive support environment.\n",
+    "- Customer support operations are multilingual, requiring English and German support coverage.\n",
+    "\n",
+    "### Business Impact:\n",
+    "- Helps identify overloaded support teams.\n",
+    "- Supports priority-based resource planning.\n",
+    "- Provides KPI-ready insights for dashboard reporting and operational decision-making."
    ]
   }
  ],
